# o-an-quan

./: .gitignore  CMakeLists.txt  LICENSE  OAQ.py  README.md  o-an-quan.cpp
.github/workflows/: prevent-exe-pushes.yml
src/: main.cpp
